5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1723_2504.log
== TEST (2019-05-13 14:32:22) 
-- CODE:
#quando as celulas de defesa forem forem o dobro da quantidade de virus 
vinicial=int(input())
linicial=int(input())
percentualv=float(input())
percentuall=float(input())
i=0
v=vinicial
l=linicual
while(2*l<=v):
	somal=l*(percentuall/100)
	l=somal+l
	somav=v*(percentualv/100)
	v=v+somav
	i=i+1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    l=linicual
NameError: name 'linicual' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:32:56) 
-- CODE:
#quando as celulas de defesa forem forem o dobro da quantidade de virus 
vinicial=int(input())
linicial=int(input())
percentualv=float(input())
percentuall=float(input())
i=0
v=vinicial
l=linicial
while(2*l<=v):
	somal=l*(percentuall/100)
	l=somal+l
	somav=v*(percentualv/100)
	v=v+somav
	i=i+1
print(i)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:34:05) 
-- CODE:
#quando as celulas de defesa forem forem o dobro da quantidade de virus 
vinicial=int(input())
linicial=int(input())
percentualv=float(input())
percentuall=float(input())
i=0
v=vinicial
l=linicial
while(2*l<v):
	somal=l*(percentuall/100)
	l=somal+l
	somav=v*(percentualv/100)
	v=v+somav
	i=i+1
print(i)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:34:31) 
-- CODE:
#quando as celulas de defesa forem forem o dobro da quantidade de virus 
vinicial=int(input())
linicial=int(input())
percentualv=float(input())
percentuall=float(input())
i=0
v=vinicial
l=linicial
while(2*l<v):
	somal=l*(percentuall/100)
	l=somal+l
	somav=v*(percentualv/100)
	v=v+somav
	i=i+1
print(i)
	
-- EXECUTION TIME:
0.21719
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
7
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
3
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:37:58) 
-- CODE:
#quando as celulas de defesa forem forem o dobro da quantidade de virus 
vinicial=int(input())
linicial=int(input())
percentualv=float(input())
percentuall=float(input())
i=0
v=vinicial
l=linicial
while(l<v*2):
	somal=l*(percentuall/100)
	l=somal+l
	somav=v*(percentualv/100)
	v=v+somav
	i=i+1
print(i)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:38:22) 
-- CODE:
#quando as celulas de defesa forem forem o dobro da quantidade de virus 
vinicial=int(input())
linicial=int(input())
percentualv=float(input())
percentuall=float(input())
i=0
v=vinicial
l=linicial
while(l<v*2):
	somal=l*(percentuall/100)
	l=somal+l
	somav=v*(percentualv/100)
	v=v+somav
	i=i+1
print(i)
	
-- EXECUTION TIME:
0.15475
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
